--- a/MasterPage.master
+++ b/MasterPage.master
@@ -5,10 +5,19 @@
 <html>
 <head runat="server">
     <title>NDS</title>
+    <link rel="stylesheet" href="css/materialize.min.css" />
+    <script src="js/materialize.min.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
+    <nav>
+    <div class="nav-wrapper">
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="LoginPage.aspx">Logout</a></li>
+      </ul>
+    </div>
+  </nav>
     <h2 style="text-align:center;font-style:italic;font-family:Calibri;">Newspaper Subscription Portal</h2>
     <form id="form1" runat="server">
     <div>
